--- a/Proyecto1/nbproject/project.properties
+++ b/Proyecto1/nbproject/project.properties
@@ -43,7 +43,8 @@ javac.classpath=\
     ${file.reference.gs-algo-2.0.jar}:\
     ${file.reference.gs-core-2.0.jar}:\
     ${file.reference.gs-ui-javafx-2.0.jar}:\
-    ${file.reference.gs-ui-swing-2.0.jar}
+    ${file.reference.gs-ui-swing-2.0.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
