Intentando conteo de islas con BFS

--- a/Proyecto1/nbproject/project.properties
+++ b/Proyecto1/nbproject/project.properties
@@ -35,8 +35,10 @@ dist.jlink.output=${dist.jlink.dir}/Proyecto1
 excludes=
 file.reference.gs-algo-2.0.jar=C:\\Users\\raco1\\Desktop\\Estructuras de datos\\graphstream\\gs-algo-2.0.jar
 file.reference.gs-core-2.0.jar=C:\\Users\\raco1\\Desktop\\Estructuras de datos\\graphstream\\gs-core-2.0.jar
+file.reference.gs-core-2.0.jar-1=C:\\Users\\AROMERO\\Downloads\\gs-core-2.0.jar
 file.reference.gs-ui-javafx-2.0.jar=C:\\Users\\raco1\\Desktop\\Estructuras de datos\\graphstream\\gs-ui-javafx-2.0.jar
 file.reference.gs-ui-swing-2.0.jar=C:\\Users\\raco1\\Desktop\\Estructuras de datos\\graphstream\\gs-ui-swing-2.0.jar
+file.reference.gs-ui-swing-2.0.jar-1=C:\\Users\\AROMERO\\Downloads\\gs-ui-swing-2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -44,7 +46,9 @@ javac.classpath=\
     ${file.reference.gs-core-2.0.jar}:\
     ${file.reference.gs-ui-javafx-2.0.jar}:\
     ${file.reference.gs-ui-swing-2.0.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.gs-core-2.0.jar-1}:\
+    ${file.reference.gs-ui-swing-2.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
