--- a/Proyecto1/nbproject/project.properties
+++ b/Proyecto1/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Proyecto1
+application.vendor=raco1
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/Proyecto1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Proyecto1
+endorsed.classpath=
 excludes=
 file.reference.gs-algo-2.0.jar=C:\\Users\\raco1\\Desktop\\Estructuras de datos\\graphstream\\gs-algo-2.0.jar
 file.reference.gs-core-2.0.jar=C:\\Users\\raco1\\Desktop\\Estructuras de datos\\graphstream\\gs-core-2.0.jar
