--- a/Proyecto1/nbproject/private/private.properties
+++ b/Proyecto1/nbproject/private/private.properties
@@ -1,2 +1,12 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\raco1\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
+do.depend=false
+do.jar=true
+do.jlink=false
+file.reference.gs-algo-2.0.jar=C:\\Users\\Raco\\Desktop\\Proyecto final 1 EDD\\ProyectoGrafos\\librerias\\gs-algo-2.0.jar
+file.reference.gs-core-2.0.jar=C:\\Users\\Raco\\Desktop\\Proyecto final 1 EDD\\ProyectoGrafos\\librerias\\gs-core-2.0.jar
+file.reference.gs-ui-javafx-2.0.jar=C:\\Users\\Raco\\Desktop\\Proyecto final 1 EDD\\ProyectoGrafos\\librerias\\gs-ui-javafx-2.0.jar
+file.reference.gs-ui-swing-2.0.jar=C:\\Users\\Raco\\Desktop\\Proyecto final 1 EDD\\ProyectoGrafos\\librerias\\gs-ui-swing-2.0.jar
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
+user.properties.file=C:\\Users\\Raco\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
